[package]
name = "rapidadd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "3"
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
dirs = "4.0"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "3.0"
tempfile = "3.0"

